Added more info to the dictionary

--- a/quinta_entrega/.vscode/settings.json
+++ b/quinta_entrega/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-  "cSpell.language": "en,es-ES",
+  "cSpell.language": "en,es-ES,es",
   "cSpell.words": [
     "Amdahl",
     "Gustafson",
+    "pdfauthor",
     "sismología",
     "supercomputadora",
     "supercomputadoras",
