Adding words and fixing typos

--- a/quinta_entrega/.vscode/settings.json
+++ b/quinta_entrega/.vscode/settings.json
@@ -2,9 +2,16 @@
   "cSpell.language": "en,es-ES,es",
   "cSpell.words": [
     "Amdahl",
+    "Baris",
+    "escalabilidad",
+    "Galerkin",
     "Gustafson",
+    "Kitware",
+    "paralelizar",
+    "Paraview",
     "pdfauthor",
     "sismología",
+    "SPECFEM",
     "supercomputadora",
     "supercomputadoras",
     "tomología"
