--- a/quinta_entrega/.vscode/settings.json
+++ b/quinta_entrega/.vscode/settings.json
@@ -3,13 +3,16 @@
   "cSpell.words": [
     "Amdahl",
     "Baris",
+    "clústers",
     "escalabilidad",
     "Galerkin",
     "Gustafson",
     "Kitware",
     "paralelizar",
     "Paraview",
+    "particionamiento",
     "pdfauthor",
+    "renderizadas",
     "sismología",
     "SPECFEM",
     "supercomputadora",
